frontend/test/should_pass/ruleallcall.grg
#using "basic_model_001.gm"

rule r : (N, Node, int, string)
{
	n:N;
	
	modify {
		return(n, n, 42, "42");
	}
}

rule s : (N, Node, int, string)
{
	n:N;
	
	modify {
		exec((r1:array<N>,r2:array<Node>,r3:array<int>,r4:array<string>)=[r]);
		exec((::_r1,::_r2,::_r3,::_r4)=[r]);
		exec([r]);
		exec((r1:N,r2:Node,r3:int,r4:string)=r);
		exec((::_r1,::_r2,::_r3,::_r4)=r);
		exec(r);
		
		return(n, n, 42, "42");
	}
}

