frontend/test/should_fail/multi_retype_due_to_hom_overshadowed_by_other_hom_nodes.grg
#using "multi_retype_due_to_hom_overshadowed_by_other_hom.gm"

rule r
{
	n1:N;
	
	optional {
		n3:N;
		n4:N;
		hom(n1,n4);
		hom(n1,n3);

		modify {
			m3:M<n3>;
		}
	}

	modify {
		m1:M<n1>;
	}
}
